# text-summary-lexrank

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh
include/: defs.hpp  file_manager.hpp  lexrank.hpp  matrix.hpp  parser.hpp  tokenizer.hpp  util.hpp  vector_space_model.hpp
report/: report.tex
scoring/: rouge_scores.py  setup.sh
src/: file_manager.cpp  lexrank.cpp  main_idf.cpp  main_lexrank.cpp  parser.cpp  tokenizer.cpp  vector_space_model.cpp
